แยก command ใน dataaccess และ dataquery
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.BackContracts/TheS.Casinova.Colors.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.DAL.BackContracts/TheS.Casinova.Colors.DAL.BackContracts.csproj
@@ -46,7 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CreatePlayerActionInfoCommand.cs" />
+    <Compile Include="Commands\GetPlayerInfoCommand.cs" />
+    <Compile Include="Commands\GetRoundInfoCommand.cs" />
     <Compile Include="Commands\UpdateOnGoingTrackingIDCommand.cs" />
+    <Compile Include="Commands\UpdatePlayerInfoBalanceCommand.cs" />
     <Compile Include="Commands\UpdateRoundWinnerCommand.cs" />
     <Compile Include="DAL\IColorsGameDataAccess.cs" />
     <Compile Include="DAL\IColorsGameDataBackQuery.cs" />
