--- a/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
+++ b/src/SPerfAll/sPerf_Web/sPerf_Web.csproj
@@ -65,13 +65,40 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Areas\Club\ClubAreaRegistration.cs" />
+    <Compile Include="Areas\Club\Controllers\ClubController.cs" />
+    <Compile Include="Areas\Game\Controllers\GameController.cs" />
+    <Compile Include="Areas\Game\GameAreaRegistration.cs" />
+    <Compile Include="Areas\KnowledgeCenter\Controllers\KnowledgeCenterController.cs" />
+    <Compile Include="Areas\KnowledgeCenter\KnowledgeCenterAreaRegistration.cs" />
+    <Compile Include="Club.ClubController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Game.GameController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HomeController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="KnowledgeCenter.KnowledgeCenterController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SharedController.generated.cs">
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
+    <Compile Include="T4MVC.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>T4MVC.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_themes\sPerf\Sites.css" />
     <Content Include="App_themes\sPerf\images\avatar.png" />
     <Content Include="App_themes\sPerf\images\bmark.png" />
     <Content Include="App_themes\sPerf\images\contentdown.png" />
@@ -91,7 +118,9 @@
     <Content Include="App_themes\sPerf\images\search.png" />
     <Content Include="App_themes\sPerf\images\text.png" />
     <Content Include="App_themes\sPerf\Layout.css" />
-    <Content Include="App_themes\sPerf\Sites.css" />
+    <Content Include="Areas\Club\Views\Club\Index.aspx" />
+    <Content Include="Areas\Game\Views\Game\Index.aspx" />
+    <Content Include="Areas\KnowledgeCenter\Views\KnowledgeCenter\Index.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Views\Home\Index.aspx" />
@@ -115,12 +144,26 @@
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Web.config" />
+    <Content Include="xap\doyouknow.xap" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\MasterPage.Master" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Areas\Club\Views\Web.config" />
+    <Content Include="Areas\Game\Views\Web.config" />
+    <Content Include="Areas\KnowledgeCenter\Views\Web.config" />
+    <None Include="T4MVC.settings.t4" />
+    <None Include="T4MVC.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>T4MVC.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
