--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.BackServices.Contracts/TheS.Casinova.Colors.BackServices.Contracts.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.BackServices.Contracts/TheS.Casinova.Colors.BackServices.Contracts.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackServices\IColorsGameBackService.cs" />
+    <Compile Include="BackServices\IGameTableBackService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
