--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Models/TheS.Casinova.Colors.Models.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Models/TheS.Casinova.Colors.Models.csproj
@@ -41,11 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\GameTableInformation.cs" />
     <Compile Include="Models\PlayerActionInformation.cs" />
     <Compile Include="Models\GamePlayInformation.cs" />
     <Compile Include="Models\GameRoundInformation.cs" />
     <Compile Include="Models\PlayerInformation.cs" />
-    <Compile Include="Models\ActiveGameRounds.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
