--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebExecutors/TheS.Casinova.Colors.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebExecutors/TheS.Casinova.Colors.WebExecutors.csproj
@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebExecutors\BetColorsExecutor.cs" />
+    <Compile Include="WebExecutors\CreateGameTableConfigExecutor.cs" />
     <Compile Include="WebExecutors\GetGameResultExecutor.cs" />
     <Compile Include="WebExecutors\ListGamePlayInfoExecutor.cs" />
     <Compile Include="WebExecutors\ListActiveGameRoundsExecutor.cs" />
