finish bet color finish create round
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
@@ -42,8 +42,10 @@
   <ItemGroup>
     <Compile Include="Commands\BetCommand.cs" />
     <Compile Include="Commands\CreateGameRoundConfigurationsCommand.cs" />
+    <Compile Include="Commands\CreateGameRoundsCommand.cs" />
     <Compile Include="Commands\GetBalanceCommand.cs" />
     <Compile Include="Commands\GetGameResultCommand.cs" />
+    <Compile Include="Commands\GetGameRoundConfigurationCommand.cs" />
     <Compile Include="Commands\ListGamePlayInfoCommand.cs" />
     <Compile Include="Commands\PayForColorsWinnerInfoCommand.cs" />
     <Compile Include="Commands\ListActiveGameRoundsCommand.cs" />
