module : MagicNine วางโครงของ SingleBet และ ListBetLog
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
@@ -34,6 +34,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PerfEx.Infrastructure">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.dll</HintPath>
+    </Reference>
+    <Reference Include="PerfEx.Infrastructure.Advanced">
+      <HintPath>..\..\..\..\..\lib\PerfEx.Infrastructure.Advanced.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -43,13 +49,23 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackServices\BackExecutors\ListBetLogExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\SingleBetExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="BackServices\" />
+    <ProjectReference Include="..\TheS.Casinova.MagicNine.Commands\TheS.Casinova.MagicNine.Commands.csproj">
+      <Project>{1F2B601A-3E92-4904-8609-5D59E62A5DB1}</Project>
+      <Name>TheS.Casinova.MagicNine.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.MagicNine.DAL.BackContracts\TheS.Casinova.MagicNine.DAL.BackContracts.csproj">
+      <Project>{DFD74195-5A5A-4159-AE83-F7A7DC5B94EC}</Project>
+      <Name>TheS.Casinova.MagicNine.DAL.BackContracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
