Create CreateGameRoundconfigFeature Create CheckActiveRoundFeature
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.Commands/TheS.Casinova.Colors.Commands.csproj
@@ -41,9 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\BetCommand.cs" />
+    <Compile Include="Commands\CheckActiveRoundToCreateCommand.cs" />
     <Compile Include="Commands\CreateGameRoundConfigurationsCommand.cs" />
     <Compile Include="Commands\GetBalanceCommand.cs" />
     <Compile Include="Commands\GetGameResultCommand.cs" />
+    <Compile Include="Commands\GetGameRoundConfigurationsCommand.cs" />
     <Compile Include="Commands\ListGamePlayInfoCommand.cs" />
     <Compile Include="Commands\PayForColorsWinnerInfoCommand.cs" />
     <Compile Include="Commands\ListActiveGameRoundsCommand.cs" />
