--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.DAL.BackContracts/TheS.Casinova.MagicNine.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.DAL.BackContracts/TheS.Casinova.MagicNine.DAL.BackContracts.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DAL\IMagicNineDataBackQuery.cs" />
+    <Compile Include="Commands\GetPlayerInfoCommand.cs" />
+    <Compile Include="Commands\UpdatePlayerInfoBalanceCommand.cs" />
+    <Compile Include="DAL\IMagicNineGameDataBackQuery.cs" />
     <Compile Include="DAL\IMagicNineGameDataAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
