Module : MagicNine add CommonSteps add MagicNineStepsBase add ListGameRoundCommand add GameRoundInformation model
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Models/TheS.Casinova.MagicNine.Models.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Models/TheS.Casinova.MagicNine.Models.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\BetInformation.cs" />
+    <Compile Include="Models\GameRoundInformation.cs" />
     <Compile Include="Models\PlayerInformation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
