--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.BackServices/TheS.Casinova.MagicNine.BackServices.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BackServices\BackExecutors\ListBetLogExecutor.cs" />
-    <Compile Include="BackServices\BackExecutors\ListGameRoundExecutor.cs" />
+    <Compile Include="BackServices\BackExecutors\ListActiveGameRoundExecutor.cs" />
     <Compile Include="BackServices\BackExecutors\SingleBetExecutor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
