Module : MagicNine remove ListActiveGameRound
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Commands/TheS.Casinova.MagicNine.Commands.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Commands/TheS.Casinova.MagicNine.Commands.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\ListBetLogCommand.cs" />
-    <Compile Include="Commands\ListGameRoundCommand.cs" />
+    <Compile Include="Commands\ListActiveGameRoundCommand.cs" />
     <Compile Include="Commands\SingleBetCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
