Module: MagicNine finist SingleBetSteps.cs
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.DAL.BackContracts/TheS.Casinova.MagicNine.DAL.BackContracts.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.DAL.BackContracts/TheS.Casinova.MagicNine.DAL.BackContracts.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\GetGameRoundPotCommand.cs" />
     <Compile Include="Commands\GetPlayerInfoCommand.cs" />
+    <Compile Include="Commands\UpdateGameRoundPotCommand.cs" />
     <Compile Include="Commands\UpdatePlayerInfoBalanceCommand.cs" />
     <Compile Include="DAL\IMagicNineGameDataBackQuery.cs" />
     <Compile Include="DAL\IMagicNineGameDataAccess.cs" />
