เขียน Specs/ListActiveGameRoundFeature
Signed-off-by: Nittaya <nittaya@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.WebExecutors/TheS.Casinova.MagicNine.WebExecutors.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.WebExecutors/TheS.Casinova.MagicNine.WebExecutors.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebExecutors\ListActiveGameRoundExecutor.cs" />
     <Compile Include="WebExecutors\ListBetLogExecutor.cs" />
     <Compile Include="WebExecutors\SingleBetExecutor.cs" />
   </ItemGroup>
