Module: MagicNine วางโครงของ StartAutoBet และ StopAutoBet
Signed-off-by: sirinarin <sirinarin@perfenterprise.com>

--- a/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Commands/TheS.Casinova.MagicNine.Commands.csproj
+++ b/src/CasinovaAll/Modules/MagicNine/TheS.Casinova.MagicNine.Commands/TheS.Casinova.MagicNine.Commands.csproj
@@ -43,6 +43,8 @@
     <Compile Include="Commands\ListBetLogCommand.cs" />
     <Compile Include="Commands\ListActiveGameRoundCommand.cs" />
     <Compile Include="Commands\SingleBetCommand.cs" />
+    <Compile Include="Commands\StartAutoBetCommand.cs" />
+    <Compile Include="Commands\StopAutoBetCommand.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
